test/errors/type/str/rep3.yasl
mt.lookup('', .rep)(.str, true)
